fix: make height to fit content, to prevent background color overflow

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ table {
   background-color: var(--main-background);
   padding: var(--space-around-main-container);
   position: relative;
+  height: fit-content;
 }
 
 .library-top {
